<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/nav_item_list" />
        <item
            android:id="@+id/nav_scaling"
            android:icon="@drawable/ic_menu_scaling"
            android:title="@string/nav_item_scaling" />
        <item
            android:id="@+id/nav_parsing"
            android:icon="@drawable/ic_menu_parsing"
            android:title="@string/nav_item_parsing" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/nav_item_map" />
    </group>


</menu>
